cititechdNew2024Jan/force-app/main/default/objects/OECCallOuts__mdt/OECCallOuts__mdt.object-meta.xml
<CustomObject>
    <label>OECCallOut</label>
    <pluralLabel>OECCallOuts</pluralLabel>
</CustomObject>