cititechdNew2024Jan/force-app/main/default/objects/OECCallOuts__mdt/fields/DevAccountId__c.field-meta.xml
<CustomField>
    <fullName>DevAccountId__c</fullName>
    <description>Stage Environment Account Id for API</description>
    <inlineHelpText>Stage Environment Account Id for API</inlineHelpText>
    <label>StageAccountId</label>
    <length>200</length>
    <type>Text</type>
</CustomField>