cititechdNew2024Jan/force-app/main/default/objects/OECCallOuts__mdt/fields/DevAuthURL__c.field-meta.xml
<CustomField>
    <fullName>DevAuthURL__c</fullName>
    <description>Stage Environment Authentication URL</description>
    <inlineHelpText>Stage Environment Authentication URL</inlineHelpText>
    <label>StageAuthURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>