cititechdNew2024Jan/force-app/main/default/objects/OECCallOuts__mdt/fields/DevEndpointURL__c.field-meta.xml
<CustomField>
    <fullName>DevEndpointURL__c</fullName>
    <description>Stage Environment Endpoint URL</description>
    <inlineHelpText>Stage Environment Endpoint URL</inlineHelpText>
    <label>StageEndpointURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>