cititechdNew2024Jan/force-app/main/default/objects/OECCallOuts__mdt/fields/DevPassword__c.field-meta.xml
<CustomField>
    <fullName>DevPassword__c</fullName>
    <description>Stage Environment User Password</description>
    <inlineHelpText>Stage Environment User Password</inlineHelpText>
    <label>StagePassword</label>
    <length>100</length>
    <type>Text</type>
</CustomField>