cititechdNew2024Jan/force-app/main/default/objects/OECCallOuts__mdt/fields/DevUserName__c.field-meta.xml
<CustomField>
    <fullName>DevUserName__c</fullName>
    <description>Stage Environment User Name</description>
    <inlineHelpText>Stage Environment User Name</inlineHelpText>
    <label>StageUserName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>