cititechdNew2024Jan/force-app/main/default/objects/OECCallOuts__mdt/fields/ProdAccountId__c.field-meta.xml
<CustomField>
    <fullName>ProdAccountId__c</fullName>
    <description>Production Environment Account Id for API</description>
    <inlineHelpText>Production Environment Account Id for API</inlineHelpText>
    <label>ProdAccountId</label>
    <length>200</length>
    <type>Text</type>
</CustomField>