cititechdNew2024Jan/force-app/main/default/objects/OECCallOuts__mdt/fields/ProdAuthURL__c.field-meta.xml
<CustomField>
    <fullName>ProdAuthURL__c</fullName>
    <description>Production Environment Authentication URL</description>
    <inlineHelpText>Production Environment Authentication URL</inlineHelpText>
    <label>ProdAuthURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>