cititechdNew2024Jan/force-app/main/default/objects/OECCallOuts__mdt/fields/ProdCancelEndpointURL__c.field-meta.xml
<CustomField>
    <fullName>ProdCancelEndpointURL__c</fullName>
    <label>ProdCancelEndpointURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>