cititechdNew2024Jan/force-app/main/default/objects/OECCallOuts__mdt/fields/ProdEndpointURL__c.field-meta.xml
<CustomField>
    <fullName>ProdEndpointURL__c</fullName>
    <description>Production Environment Endpoint URL</description>
    <inlineHelpText>Production Environment Endpoint URL</inlineHelpText>
    <label>ProdEndpointURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>