cititechdNew2024Jan/force-app/main/default/objects/OECCallOuts__mdt/fields/ProdPassword__c.field-meta.xml
<CustomField>
    <fullName>ProdPassword__c</fullName>
    <description>Production Environment User Password</description>
    <inlineHelpText>Production Environment User Password</inlineHelpText>
    <label>ProdPassword</label>
    <length>100</length>
    <type>Text</type>
</CustomField>