cititechdNew2024Jan/force-app/main/default/objects/OECCallOuts__mdt/fields/ProdTeamsCreationEndpointURL__c.field-meta.xml
<CustomField>
    <fullName>ProdTeamsCreationEndpointURL__c</fullName>
    <label>ProdTeamsCreationEndpointURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>