cititechdNew2024Jan/force-app/main/default/objects/OECCallOuts__mdt/fields/ProdUserName__c.field-meta.xml
<CustomField>
    <fullName>ProdUserName__c</fullName>
    <description>Production Environment User Name</description>
    <inlineHelpText>Production Environment User Name</inlineHelpText>
    <label>ProdUserName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>