cititechdNew2024Jan/force-app/main/default/objects/OECCallOuts__mdt/fields/QAAccountId__c.field-meta.xml
<CustomField>
    <fullName>QAAccountId__c</fullName>
    <description>QA Environment Account Id for API</description>
    <inlineHelpText>QA Environment Account Id for API</inlineHelpText>
    <label>QAAccountId</label>
    <length>200</length>
    <type>Text</type>
</CustomField>