cititechdNew2024Jan/force-app/main/default/objects/OECCallOuts__mdt/fields/QAAuthURL__c.field-meta.xml
<CustomField>
    <fullName>QAAuthURL__c</fullName>
    <description>QA Environment Authentication URL</description>
    <inlineHelpText>QA Environment Authentication URL</inlineHelpText>
    <label>QAAuthURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>