cititechdNew2024Jan/force-app/main/default/objects/OECCallOuts__mdt/fields/QACancelEndpointURL__c.field-meta.xml
<CustomField>
    <fullName>QACancelEndpointURL__c</fullName>
    <label>QACancelEndpointURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>