cititechdNew2024Jan/force-app/main/default/objects/OECCallOuts__mdt/fields/QAEndpointURL__c.field-meta.xml
<CustomField>
    <fullName>QAEndpointURL__c</fullName>
    <description>QA Environment Endpoint URL</description>
    <inlineHelpText>QA Environment Endpoint URL</inlineHelpText>
    <label>QAEndpointURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>