cititechdNew2024Jan/force-app/main/default/objects/OECCallOuts__mdt/fields/QAPassword__c.field-meta.xml
<CustomField>
    <fullName>QAPassword__c</fullName>
    <description>QA Environment User Password</description>
    <inlineHelpText>QA Environment User Password</inlineHelpText>
    <label>QAPassword</label>
    <length>100</length>
    <type>Text</type>
</CustomField>