cititechdNew2024Jan/force-app/main/default/objects/OECCallOuts__mdt/fields/QATeamsCreationEndpointURL__c.field-meta.xml
<CustomField>
    <fullName>QATeamsCreationEndpointURL__c</fullName>
    <label>QATeamsCreationEndpointURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>