cititechdNew2024Jan/force-app/main/default/objects/OECCallOuts__mdt/fields/QAUserName__c.field-meta.xml
<CustomField>
    <fullName>QAUserName__c</fullName>
    <description>QA Environment User Name</description>
    <inlineHelpText>QA Environment User Name</inlineHelpText>
    <label>QAUserName</label>
    <length>100</length>
    <type>Text</type>
</CustomField>