cititechdNew2024Jan/force-app/main/default/objects/OECCallOuts__mdt/fields/StageCancelEndpointURL__c.field-meta.xml
<CustomField>
    <fullName>StageCancelEndpointURL__c</fullName>
    <label>StageCancelEndpointURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>