cititechdNew2024Jan/force-app/main/default/objects/OECCallOuts__mdt/fields/StageTeamsCreationEndpointURL__c.field-meta.xml
<CustomField>
    <fullName>StageTeamsCreationEndpointURL__c</fullName>
    <label>StageTeamsCreationEndpointURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>